# SensorFusionCalibrate

./: .gitignore  CMakeLists.txt  README.md  SensorFusionCalibrate.pro  ansiescape.cpp  ansiescape.h  application.cpp  application.h  dataitem.cpp  dataitem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  terminal.cpp  terminal.h
math/: matrices.cpp  matrices.h
qt/: static_build_guide.md
src/: CMakeLists.txt  main.cpp
src/app/: application.cpp  application.h  calibrate.cpp  calibrate.h  calibrate_types.h  calibration_point.cpp  calibration_point.h  settings.cpp  settings.h
src/data/: calibration_result.cpp  calibration_result.h  data_types.h  point.cpp  point.h  points_singleton.h  quaternion.cpp  quaternion.h  serialport_config.cpp  serialport_config.h  serialport_id_match.h
src/datasource/: csv_file.cpp  csv_file.h  data_source_interface.h  idatasource.h  line_parser.cpp  parse_numbers.cpp  parse_numbers.h  serial_port.cpp  serial_port.h
src/datasource/file/: csv_file.cpp  csv_file.h  csv_file_config.cpp  csv_file_config.h
src/datasource/serial/: id_matcher.cpp  id_matcher.h  serialport.cpp  serialport.h  serialport_id_match.cpp  serialport_id_matcher.cpp  serialport_id_matcher.h  unescape.h
src/math/: choleski.h  data_movement.cpp  data_movement.h  hessenberg_elementary.h  matrices.cpp  matrices.h
src/resources/: resources.qrc
src/terminal/ansi/: ansi.cpp  ansi.h  ansi_classes.h  ansi_color.cpp  ansi_color.h  ansi_enums.h  ansi_handler_interface.h
src/virtual_terminal_emulator/: control_code.h  functions.cpp  functions.h  parser-seq.py  sequence.cpp  sequence.h  sequence_handler_interface.h  sequence_parameters.h  sequence_parameters_builder.h  sequencer.cpp  sequencer.h  vt_type.cpp  vt_type.h
src/virtual_terminal_emulator/parser/: parser.cpp  parser.h  parser_action.h  parser_enums.h  parser_events_interface.h  parser_extension.h  parser_sequence.cpp  parser_sequence.h  parser_state.h  sequence_argument.cpp  sequence_argument.h
src/virtual_terminal_emulator/parser/types/: parser_c01.h  parser_charset.h  parser_cmd.h  parser_cmd_handlers.h  parser_csi.h  parser_dcs.h  parser_decsgr.h  parser_esc.h  parser_osc.h  parser_reply.h  parser_sci.h
src/virtual_terminal_emulator/utils/: vt_assert.h  vt_boxed.h  vt_escape.h  vt_indexed.h  vt_sort.h  vt_times.h
src/widget/: calibration_result.cpp  calibration_result.h  calibration_result.ui  calibration_result_widget.cpp  calibration_result_widget.h  csv_file_control.cpp  csv_file_control.h  csv_file_control.ui  main_window.cpp  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialport_config_dialog.cpp  serialport_config_dialog.h  serialport_config_dialog.ui  serialport_control.cpp  serialport_control.h  serialport_control.ui  serialport_terminal.cpp  serialport_terminal.h  serialport_terminal.ui  theme.h  visualize.cpp  visualize.h
terminal/: terminal.cpp  terminal.h
terminal/escape/: escape_osc.cpp  escape_osc.h  terminal_data.cpp  terminal_data.h  terminal_escape.cpp  terminal_escape.h
tests/: CMakeLists.txt  tst_ansi.cpp  tst_matrices.cpp
